New single graphics backend and cleanup + share common code.

--- a/engine/AlimerConfig.h.in
+++ b/engine/AlimerConfig.h.in
@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2019-2020 Amer Koleci and contributors.
+// Copyright (c) 2020 Amer Koleci and contributors.
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -20,27 +20,26 @@
 // THE SOFTWARE.
 //
 
-#pragma once
+#ifndef ALIMER_API_H
+#define ALIMER_API_H
 
-#include "Graphics/GPUBuffer.h"
-#include "D3D12Backend.h"
+/* Version */
+#define ALIMER_VERSION_MAJOR   @ALIMER_VERSION_MAJOR@
+#define ALIMER_VERSION_MINOR   @ALIMER_VERSION_MINOR@
+#define ALIMER_VERSION_PATCH   @ALIMER_VERSION_PATCH@
+#define ALIMER_VERSION_STR     "@ALIMER_VERSION_MAJOR@.@ALIMER_VERSION_MINOR@.@ALIMER_VERSION_PATCH@"
+#define ALIMER_VERSION_ALIAS "WIP"
 
-namespace Alimer
-{
-    class D3D12Buffer final : public GPUBuffer
-    {
-    public:
-        D3D12Buffer(D3D12GraphicsDevice* device, const BufferDescription& desc, const void* initialData);
-        ~D3D12Buffer() override;
-        void Destroy();
+/* Build configuration */
+#cmakedefine ALIMER_LOGGING
+#cmakedefine ALIMER_PROFILING
+#cmakedefine ALIMER_THREADING
+#cmakedefine ALIMER_NETWORK
+#cmakedefine ALIMER_PLUGINS
 
-        D3D12_GPU_VIRTUAL_ADDRESS GetGpuVirtualAddress() const { return gpuVirtualAddress; }
+/* Graphics API */
+#cmakedefine ALIMER_D3D12
+#cmakedefine ALIMER_VULKAN
+#cmakedefine ALIMER_METAL
 
-    private:
-        void BackendSetName() override;
-
-        D3D12GraphicsDevice* device;
-        D3D12_RESOURCE_STATES state{ D3D12_RESOURCE_STATE_COMMON };
-        D3D12_GPU_VIRTUAL_ADDRESS gpuVirtualAddress{ D3D12_GPU_VIRTUAL_ADDRESS_NULL };
-    };
-}
+#endif
