--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,38 +69,23 @@ include(alimer)
 option(BUILD_SHARED_LIBS  "Build shared libraries" OFF)
 option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
+if (WIN32)
+    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Select Graphics API [D3D12 | Vulkan]")
+    set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 Vulkan)
+elseif (WINDOWS_STORE)
+    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Use D3D12 Graphics API" FORCE)
+elseif (IOS)
+    set(ALIMER_GRAPHICS_API Metal CACHE STRING "Use Metal Graphics API" FORCE)
+else ()
+    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Use Vulkan Graphics API" FORCE)
+endif ()
+string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
+set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
+
 if (NOT ANDROID AND NOT EMSCRIPTEN AND NOT IOS AND NOT WINDOWS_STORE)
     option(ALIMER_BUILD_TOOLS "Build tools" TRUE)
     option(ALIMER_BUILD_EDITOR "Build Editor" ON)
 endif()
-
-# Default values for the backend-enabling options
-set(ENABLE_D3D12 OFF)
-set(ENABLE_D3D11 OFF)
-set(ENABLE_METAL OFF)
-set(ENABLE_VULKAN OFF)
-
-if(EMSCRIPTEN)
-    set(ENABLE_OPENGL ON)
-elseif(ANDROID)
-    set(ENABLE_VULKAN ON)
-elseif(WINDOWS_STORE)
-    set(ENABLE_D3D12 ON)
-    set(ENABLE_D3D11 ON)
-elseif (WIN32)
-    set(ENABLE_D3D12 ON)
-    set(ENABLE_D3D11 ON)
-    set(ENABLE_VULKAN ON)
-elseif(APPLE)
-    set(ENABLE_METAL ON)
-elseif(UNIX)
-    set(ENABLE_VULKAN ON)
-endif()
-option(ALIMER_ENABLE_D3D12 "Enable compilation of the D3D12 backend" ${ENABLE_D3D12})
-option(ALIMER_ENABLE_D3D11 "Enable compilation of the D3D11 backend" ${ENABLE_D3D11})
-option(ALIMER_ENABLE_METAL "Enable compilation of the Metal backend" ${ENABLE_METAL})
-option(ALIMER_ENABLE_NULL "Enable compilation of the Null backend" ON)
-option(ALIMER_ENABLE_VULKAN "Enable compilation of the Vulkan backend" ${ENABLE_VULKAN})
 
 # Setup
 if(EMSCRIPTEN)
@@ -162,18 +147,7 @@ if(ALIMER_WARNINGS_AS_ERRORS)
 endif()
 
 # Print graphics backends.
-if(ALIMER_ENABLE_D3D12)
-    message(STATUS "  Build Renderer: Direct3D 12")
-endif()
-if(ALIMER_ENABLE_METAL)
-    message(STATUS "  Build Renderer: Metal")
-endif()
-if(ALIMER_ENABLE_VULKAN)
-    message(STATUS "  Build Renderer: Vulkan")
-endif()
-if(ALIMER_ENABLE_NULL)
-    message(STATUS "  Build Renderer: Null")
-endif()
+message (STATUS "  Graphics API:   ${ALIMER_GRAPHICS_API} (ALIMER_${ALIMER_GRAPHICS_API_UPPER})")
 
 # Install files
 # README.md and license
