--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -58,8 +58,8 @@ if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
 endif()
 
 if(WIN32 OR WINDOWS_STORE)
-    define_engine_source_files(Graphics/D3D)
-    define_engine_source_files(Graphics/D3D12)
+    #define_engine_source_files(Graphics/D3D)
+    #define_engine_source_files(Graphics/D3D12)
 endif()
 
 if (ALIMER_ENABLE_VULKAN)
@@ -82,6 +82,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
+    agpu
     fmt
     stb
     imgui
@@ -155,10 +156,6 @@ endif ()
 
 if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
     target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
-endif ()
-
-if (ALIMER_D3D12)
-    target_link_libraries(${PROJECT_NAME} PRIVATE D3D12MemoryAllocator d3d12 d3d11 dxgi dxguid)
 endif ()
 
 # SDK installation
