--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -57,9 +57,9 @@ if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
     define_engine_source_files(Platform/glfw)
 endif()
 
-if(WIN32 OR WINDOWS_STORE)
-    #define_engine_source_files(Graphics/D3D)
-    #define_engine_source_files(Graphics/D3D12)
+if(ALIMER_D3D12)
+    define_engine_source_files(Graphics/D3D)
+    define_engine_source_files(Graphics/D3D12)
 endif()
 
 if (ALIMER_ENABLE_VULKAN)
@@ -156,6 +156,10 @@ endif ()
 
 if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
     target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+endif ()
+
+if (ALIMER_D3D12)
+    target_link_libraries(${PROJECT_NAME} PRIVATE D3D12MemoryAllocator)
 endif ()
 
 # SDK installation
