--- a/tools/ShaderCompiler/CMakeLists.txt
+++ b/tools/ShaderCompiler/CMakeLists.txt
@@ -1,8 +1,4 @@
 
-# CMake version
-cmake_minimum_required(VERSION 3.10)
-project(ShaderCompiler)
-
 # Library
 add_library(ShaderCompilerLib
 	include/ShaderCompiler.h
@@ -13,20 +9,20 @@ target_include_directories(ShaderCompilerLib PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
-# Library
-add_executable(${PROJECT_NAME} src/main.cpp)
+# Executable
+add_executable(ShaderCompiler src/main.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
+target_link_libraries(ShaderCompiler PRIVATE
     ShaderCompilerLib
     cxxopts
 )
 
 if (MSVC)
     # Set warning level 3 and treat all other warnings as errors
-	target_compile_options(${PROJECT_NAME} PRIVATE /W3 /WX)
+	target_compile_options(ShaderCompiler PRIVATE /W3 /WX)
 else()
-    set_property(TARGET ${PROJECT_NAME} PROPERTY COMPILE_FLAGS "-Wall -Wno-strict-aliasing -pedantic")
+    set_property(TARGET ShaderCompiler PROPERTY COMPILE_FLAGS "-Wall -Wno-strict-aliasing -pedantic")
 endif ()
 
 set_property(TARGET ShaderCompilerLib PROPERTY FOLDER "Tools")
-set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "Tools")
+set_property(TARGET ShaderCompiler PROPERTY FOLDER "Tools")
