--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,19 +68,24 @@ include(alimer)
 # Options
 option(BUILD_SHARED_LIBS  "Build shared libraries" OFF)
 option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
+option(ALIMER_LOGGING "Enable logging macros" ON)
+option(ALIMER_PROFILING "Enable performance profiling" ON)
+option(ALIMER_THREADING "Enable multithreading" ON)
+option(ALIMER_NETWORK "Enable Networking system " ON)
+option(ALIMER_PHYSICS "Enable Physics system" ON)
 
 if (WIN32)
-    option(ALIMER_D3D12 "Enable D3D12 backend" ON)
-    option(ALIMER_D3D11 "Enable D3D11 backend" ON)
-    option(ALIMER_VULKAN "Enable Vulkan backend" ON)
+    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Select Graphics API [D3D12 | Vulkan]")
+    set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 Vulkan)
 elseif (WINDOWS_STORE)
-    option(ALIMER_D3D12 "Enable D3D12 backend" ON)
-    option(ALIMER_D3D11 "Enable D3D11 backend" ON)
+    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Use D3D12 Graphics API" FORCE)
 elseif (IOS)
-    set(ALIMER_METAL ON CACHE STRING "Use Metal Graphics API" FORCE)
+    set(ALIMER_GRAPHICS_API Metal CACHE STRING "Use Metal Graphics API" FORCE)
 else ()
-    set(ALIMER_VULKAN ON CACHE STRING "Use Vulkan Graphics API" FORCE)
+    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Use Vulkan Graphics API" FORCE)
 endif ()
+string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
+set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
 
 if (NOT ANDROID AND NOT EMSCRIPTEN AND NOT IOS AND NOT WINDOWS_STORE)
     option(ALIMER_BUILD_TOOLS "Build tools" TRUE)
@@ -152,14 +157,12 @@ else ()
     message(STATUS "  Library         STATIC")
 endif ()
 
-if(ALIMER_WARNINGS_AS_ERRORS)
-    message(STATUS "  Warnings as Errors Enabled")
-endif()
-
-# Print graphics backends.
-if(ALIMER_D3D12)
-    message (STATUS "  Graphics API:   Direct3D12 (ALIMER_D3D12)")
-endif()
+message(STATUS "  Logging         ${ALIMER_LOGGING}")
+message(STATUS "  Profiling       ${ALIMER_PROFILING}")
+message(STATUS "  Threading       ${ALIMER_THREADING}")
+message(STATUS "  Graphics API:   ${ALIMER_GRAPHICS_API} (ALIMER_${ALIMER_GRAPHICS_API_UPPER})")
+message(STATUS "  Network         ${ALIMER_NETWORK}")
+message(STATUS "  Physics         ${ALIMER_PHYSICS}")
 
 # Install files
 # README.md and license
