--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -87,6 +87,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
+    agpu
     fmt
     stb
 )
