New Event based platform logic and initial GLFW logic, improve various headers logic and cleanup graphics code.

--- a/engine/AlimerConfig.h.in
+++ b/engine/AlimerConfig.h.in
@@ -39,6 +39,7 @@
 #cmakedefine ALIMER_IMGUI
 
 /* Graphics API */
+#cmakedefine ALIMER_D3D11
 #cmakedefine ALIMER_D3D12
 #cmakedefine ALIMER_VULKAN
 #cmakedefine ALIMER_METAL
