--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -56,7 +56,7 @@ if(ALIMER_D3D11)
 endif()
 
 if(ALIMER_D3D12)
-    #define_engine_source_files(Graphics/D3D12)
+    define_engine_source_files(Graphics/D3D12)
 endif()
 
 if (ALIMER_VULKAN)
@@ -176,6 +176,10 @@ endif ()
 if (ALIMER_IMGUI)
     target_link_libraries(${PROJECT_NAME} PUBLIC imgui)
 endif ()
+
+if(ALIMER_D3D12)
+    target_link_libraries(${PROJECT_NAME} PRIVATE D3D12MemoryAllocator)
+endif()
 
 if (ALIMER_VULKAN)
     target_link_libraries(${PROJECT_NAME} PRIVATE volk vma)
