--- a/.github/workflows/windows-continuous.yml
+++ b/.github/workflows/windows-continuous.yml
@@ -2,8 +2,9 @@ name: Windows
 
 on:
   push:
-    branches:
-      - master
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-windows:
