RHI: More cleanup and create D3D12 Pipeline upon creation and not with hashing state.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 
 if (ALIMER_D3D12)
     define_engine_source_files(RHI/D3DCommon)
-    #define_engine_source_files(RHI/D3D12)
+    define_engine_source_files(RHI/D3D12)
 endif()
 
 if (ALIMER_VULKAN)
