--- a/tools/Editor/CMakeLists.txt
+++ b/tools/Editor/CMakeLists.txt
@@ -20,7 +20,7 @@ install(TARGETS ${TARGET_NAME}
 )
 
 if (MSVC)
-    set_property(TARGET ${TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+    set_property(TARGET ${TARGET_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:${TARGET_NAME}>")
 endif ()
 
 set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "Editor")
