--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -48,18 +48,11 @@ define_engine_source_files(
 )
 
 # Graphics backend
-if (ALIMER_D3D11)
-    define_engine_source_files(Graphics/D3D)
-    #define_engine_source_files(Graphics/D3D11)
-endif()
-
 if (ALIMER_D3D12)
     define_engine_source_files(Graphics/D3D)
     define_engine_source_files(Graphics/D3D12)
-endif()
-
-if (ALIMER_VULKAN)
-    #define_engine_source_files(RHI/Vulkan)
+elseif (ALIMER_VULKAN)
+    #define_engine_source_files(Graphics/Vulkan)
 endif()
 
 if (ALIMER_IMGUI)
@@ -182,7 +175,7 @@ if(NOT (WINDOWS_STORE OR EMSCRIPTEN OR ANDROID))
 endif ()
 
 if (ALIMER_D3D12)
-    target_link_libraries(${PROJECT_NAME} PRIVATE dxc)
+    target_link_libraries(${PROJECT_NAME} PRIVATE d3d12 dxgi dxc)
     add_dependencies(${PROJECT_NAME} CopyDxcompiler)
 endif ()
 
