RHI: More CommandList logic and restore D3D11 backend as well.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -50,7 +50,7 @@ define_engine_source_files(
 # Graphics backend
 if (ALIMER_D3D11)
     define_engine_source_files(RHI/D3D)
-    #define_engine_source_files(RHI/D3D11)
+    define_engine_source_files(RHI/D3D11)
 endif()
 
 if (ALIMER_D3D12)
