RHI: Restoring Vulkan backend.

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -59,7 +59,7 @@ if (ALIMER_D3D12)
 endif()
 
 if (ALIMER_VULKAN)
-    #define_engine_source_files(Graphics/Vulkan)
+    define_engine_source_files(RHI/Vulkan)
 endif()
 
 if (ALIMER_IMGUI)
