Graphics: Drop D3D11 support and restoring Vulkan.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,17 +72,15 @@ option(ALIMER_PHYSICS "Enable Physics system" ON)
 option(ALIMER_IMGUI "Enable ImGui system" ON)
 
 if (WIN32)
-    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Select Graphics API [D3D12 | Vulkan]")
-    set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 Vulkan)
+  option(ALIMER_D3D12 "Enable D3D12 backend" ON)
+  option(ALIMER_VULKAN "Enable Vulkan backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Use D3D12 Graphics API" FORCE)
+  set(ALIMER_D3D12 ON CACHE STRING "Use D3D12 Graphics API" FORCE)
 elseif (IOS)
-    set(ALIMER_GRAPHICS_API Metal CACHE STRING "Use Metal Graphics API" FORCE)
+  set(ALIMER_METAL ON CACHE STRING "Use Metal Graphics API" FORCE)
 else ()
-    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Use Vulkan Graphics API" FORCE)
+  set(ALIMER_VULKAN ON CACHE STRING "Use Vulkan Graphics API" FORCE)
 endif ()
-string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
-set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
 
 if (NOT ANDROID AND NOT EMSCRIPTEN AND NOT IOS AND NOT WINDOWS_STORE)
     option(ALIMER_BUILD_TOOLS "Build tools" TRUE)
